<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/color_bg"
    android:orientation="vertical"
    android:paddingTop="30dp"
    android:paddingBottom="40dp">

    <ImageView
        android:id="@+id/logo_icon"
        android:layout_width="183dp"
        android:layout_height="51dp"
        android:layout_gravity="center|top"
        android:layout_weight="1"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_laptop" />

    <TextView
        android:id="@+id/txt_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:paddingTop="20dp"
        android:text="@string/sign_up_and_create_your_account"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/fstname_edtxt"
        android:layout_width="326dp"
        android:layout_height="13dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/first_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:textColorHint="@color/white"
        tools:ignore="RtlCompat,RtlSymmetry"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/scnd_edtxt"

        android:layout_width="326dp"
        android:layout_height="13dp"
        android:layout_weight="1"        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/second_name"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:textColorHint="@color/white"
        tools:ignore="Autofill,RtlCompat,RtlSymmetry" />


    <EditText
        android:id="@+id/email_edtxt"

        android:layout_width="326dp"
        android:layout_height="13dp"
        android:layout_weight="1"        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/email"
        android:paddingStart="16dp"
        android:textColorHint="@color/white"
        android:paddingLeft="16dp" />


    <EditText
        android:id="@+id/pass_edtxt"

        android:layout_width="326dp"
        android:layout_height="13dp"
        android:layout_weight="1"        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"

        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/pass2_edtxt"

        android:layout_width="326dp"
        android:layout_height="13dp"
        android:layout_weight="1"        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"

        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/signup"

        android:layout_width="180dp"
        android:layout_height="15dp"
        android:layout_weight="1"        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_login"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        />

</LinearLayout>

