<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/color_bg"
    android:orientation="vertical"
    android:paddingTop="30dp"
    android:paddingBottom="120dp"
    android:paddingEnd="40dp"
    android:paddingStart="40dp">

    <ImageView
        android:id="@+id/logo_icon"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:contentDescription="@string/todo"
        android:foregroundGravity="center"
        android:src="@drawable/ic_laptop" />

    <TextView
        android:id="@+id/txt_signUp"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="Reset Your Password"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/newpass_edtxt"
        android:inputType="textPassword"

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/new_password"
        android:paddingStart="16dp"
        android:textColorHint="@color/white"
        android:paddingLeft="16dp" />

    <EditText
        android:id="@+id/newpass2_edtxt"
        android:inputType="textPassword"

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/confirm_new_password"
        android:paddingStart="16dp"
        android:textColorHint="@color/white"
        android:paddingLeft="16dp" />

    <Button
        android:id="@+id/btn_done"

        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_weight="1"        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/btn_login"
        android:gravity="center"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

</LinearLayout>
