<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/color_bg"
    android:orientation="vertical"
    android:paddingTop="50dp"
    android:paddingBottom="200dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">


    <ImageView
        android:id="@+id/logo_icon"
        android:layout_width="300dp"
        android:layout_height="132dp"
        android:layout_gravity="center|center_vertical"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_laptop" />

    <TextView
        android:id="@+id/txt_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"        android:layout_gravity="center"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:text="@string/forget_your_password"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/email_edtxt"

        android:layout_width="326dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="Type your email"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/btn_send"

        android:layout_width="100dp"
        android:layout_height="34dp"
        android:layout_gravity="right"
        android:layout_marginTop="60dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:background="@drawable/btn_login"
        android:gravity="center"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />




</LinearLayout>